--- a/home.html
+++ b/home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Project</title>
+    <!-- Optional: Link to your CSS -->
 </head>
 <body>
-    <h2>Hello World</h2>
+  <h1>Welcome to My Project!</h1>
+  <p>This is a simple page for my GitHub Pages site.</p>
 </body>
 </html>
